# ersha-os

./: .gitignore  Cargo.toml  Justfile  README.md  dist-workspace.toml  flake.nix
.github/workflows/: ci.yml  release.yml
ersha-core/: Cargo.toml  README.md
ersha-core/src/: lib.rs
ersha-core/src/protocol/: error.rs  mod.rs  packet.rs  sensor.rs
ersha-dashboard/: Cargo.toml  README.md
ersha-dashboard/src/: app.rs  main.rs
ersha-dispatch/: .gitignore  Cargo.toml  README.md  ersha-dispatch.toml
ersha-dispatch/docs/: storage.md
ersha-dispatch/migrations/: 20240101000000_init.sql
ersha-dispatch/src/: config.rs  lib.rs  main.rs  state.rs
ersha-dispatch/src/edge/: mock.rs  mod.rs  tcp.rs
ersha-dispatch/src/storage/: memory.rs  migrations.rs  mod.rs  models.rs  sqlite.rs
ersha-dispatch/tests/: storage_memory.rs
ersha-dispatchers-harness/: Cargo.toml  ersha-dispatchers-harness.toml
ersha-dispatchers-harness/src/: main.rs
ersha-edge/: Cargo.toml  README.md
ersha-edge/examples/: README.md
ersha-edge/examples/rp235x/: Cargo.toml
ersha-edge/examples/rp235x/src/: main.rs
ersha-edge/examples/server/: Cargo.toml
ersha-edge/examples/server/src/: main.rs
ersha-edge/src/: engine.rs  lib.rs  sensor.rs  sensor_registry.rs  transport.rs
ersha-edge/src/transport/: mod.rs  wifi.rs
ersha-grafana/: .gitignore  Justfile  docker-compose.yml
ersha-grafana/jsonnet/dashboards/: device-health.jsonnet  overview.jsonnet  sensor-readings.jsonnet  world-map.jsonnet
ersha-grafana/jsonnet/lib/: clickhouse.libsonnet  common.libsonnet
ersha-grafana/provisioning/alerting/: alert-rules.yml  contact-points.yml  notification-policies.yml
ersha-grafana/provisioning/dashboards/: dashboards.yml
ersha-grafana/provisioning/datasources/: clickhouse.yml
ersha-prime/: Cargo.toml  README.md  ersha-prime.toml
ersha-prime/api/: devices.rs  dispatchers.rs  error.rs  models.rs
ersha-prime/examples/: clickhouse_test.rs
ersha-prime/migrations/: 001_init.sql  002_readings_and_statuses.sql
ersha-prime/src/: config.rs  lib.rs  main.rs
ersha-prime/src/api/: devices.rs  dispatchers.rs  error.rs  mod.rs  models.rs
ersha-prime/src/api/dashboard/: error.rs  handlers.rs  mod.rs  models.rs
ersha-prime/src/registry/: filter.rs  memory.rs  mod.rs  sqlite.rs
ersha-prime/src/registry/clickhouse/: device.rs  device_status.rs  dispatcher.rs  mod.rs  reading.rs
ersha-prime/src/registry/memory/: device.rs  dispatcher.rs  mod.rs
ersha-prime/src/registry/sqlite/: device.rs  device_status.rs  dispatcher.rs  mod.rs  reading.rs
ersha-registry/: .gitignore  elm.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ersha-registry/src/: Main.elm  SvgAssets.elm  Types.elm  main.ts
ersha-rpc/: Cargo.toml  README.md
ersha-rpc/examples/: client.rs  server.rs
ersha-rpc/src/: client.rs  lib.rs  rpc.rs  server.rs
ersha-tls/: Cargo.toml  Makefile  README.md
ersha-tls/src/: lib.rs
examples/rp235x/: Cargo.toml
examples/rp235x/.cargo/: config.toml
examples/rp235x/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
