[workspace]
members = [
    "ersha-core",
    "ersha-dispatch",
    "ersha-prime",
    "ersha-rpc",
    "ersha-dashboard",
]
resolver = "3"

[workspace.dependencies.jiff]
version = "0.2.18"
features = ["serde"]

[workspace.dependencies.ordered-float]
version = "5.1.0"
features = ["serde"]

[workspace.dependencies.tokio]
version = "1"
features = [
    "full",
    "macros",
    "rt-multi-thread",
]

[workspace.dependencies.ulid]
version = "1.2.1"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.8"
features = ["sqlite", "runtime-tokio", "macros", "migrate"]

[workspace.dependencies.thiserror]
version = "2.0.18"

[workspace.dependencies.async-trait]
version = "0.1"

[profile.dist]
lto = "thin"
inherits = "release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
