[workspace]
members = [
    "ersha-core",
    "ersha-dispatch",
    "ersha-prime",
    "ersha-rpc",
    "ersha-dashboard", "ersha-edge",
]
resolver = "3"

[workspace.dependencies.jiff]
version = "0.2.18"
features = ["serde"]

[workspace.dependencies.ordered-float]
version = "5.1.0"
features = ["serde"]

[workspace.dependencies.tokio]
version = "1"
features = [
    "full",
    "macros",
    "rt-multi-thread",
]

[workspace.dependencies.ulid]
version = "1.2.1"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.8"
features = ["sqlite", "runtime-tokio", "macros", "migrate"]

[workspace.dependencies.thiserror]
version = "2.0.18"

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.color-eyre]
version = "0.6"

[workspace.dependencies.toml]
version = "0.8"

[workspace.dependencies.async-trait]
version = "0.1"

[workspace.dependencies.axum]
version = "0.8"

[workspace.dependencies.tokio-util]
version = "0.7"

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[workspace.dependencies.rand]
version = "0.9"

[workspace.dependencies.postcard]
version = "1.1.3"

[profile.dist]
lto = "thin"
inherits = "release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[patch.crates-io]
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-net = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
