[package]
name = "ersha-dispatch"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ersha-os/ersha-os"

[dependencies]
ersha-core = { path = "../ersha-core" } 
ulid.workspace = true
async-trait = "0.1"
jiff.workspace = true
serde_json = "1"
tokio.workspace = true
sqlx.workspace = true
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.24.0"
