[package]
name = "ersha-dispatch"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ersha-os/ersha-os"

[dependencies]
ersha-core = { path = "../ersha-core" }
async-trait.workspace = true
jiff.workspace = true
serde_json = "1"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true

[dev-dependencies]
