[package]
name = "ersha-dispatch"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/ersha-os/ersha-os"

[dependencies]
ersha-core = { path = "../ersha-core" }
ersha-rpc = { path = "../ersha-rpc" }
ersha-edge = { path = "../ersha-edge" }
ersha-tls = { path = "../ersha-tls" }
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
color-eyre.workspace = true
jiff.workspace = true
ordered-float.workspace = true
rand.workspace = true
serde.workspace = true
serde_json = "1"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
postcard.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
h3o = "0.7"
reqwest.workspace = true

[dev-dependencies]
