[package]
name = "ersha-dispatchers-harness"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/ersha-os/ersha-os"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
h3o = "0.7"
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
