[package]
name = "ersha-edge"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
embassy-executor = "0.9.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-net = { version = "0.8.0", features = ["defmt", "tcp", "dhcpv4", "dns", "proto-ipv4"] }
serde = { version = "1.0.228", default-features = false }
postcard = "1.1.3"


[patch.crates-io]
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-net = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
