[package]
name = "ersha-prime"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ersha-os/ersha-os"

[dependencies]
ersha-core = { path = "../ersha-core" }
ersha-rpc = { path = "../ersha-rpc" }
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
color-eyre.workspace = true
jiff.workspace = true
ordered-float.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
reqwest.workspace = true
clickhouse.workspace = true
