[package]
name = "ersha-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
ersha-core = { version = "0.1.0", path = "../ersha-core" }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
ulid = "1.2.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
