[package]
name = "ersha-rpc"
version = "0.1.1"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
ersha-core = { version = "0.1.1", path = "../ersha-core" }
postcard = { version = "1.1.3", features = ["use-std"] }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
ersha-tls = { path = "../ersha-tls" }
