[package]
name = "rp235x"
version = "0.1.0"
edition = "2024"

[dependencies]
ersha-edge = { path = "../../ersha-edge" }

embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["rp235xa", "critical-section-impl", "time-driver", "binary-info", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
critical-section = "1.1"
static_cell = "2.1.1"

cyw43 = { version = "0.6.0",  features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9.0",  features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m-rt = "0.7.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
embassy-net = { version = "0.8.0", features = ["defmt", "tcp", "dhcpv4", "dns", "proto-ipv4"] }

# TODO: update once there is a new release of embassy
# ref: https://github.com/embassy-rs/embassy/issues/4842
[patch.crates-io]
cyw43 = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
cyw43-pio = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-rp = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }
embassy-net = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy", rev = "b80c399" }


[workspace]

[package.metadata.cargo-embed]
target = "thumbv8m.main-none-eabihf"

